--- a/index.html
+++ b/index.html
@@ -3,26 +3,29 @@
 <head>
 <meta charset="UTF-8">
 <title>Wissen fangen</title>
+
 <style>
-  body {
+  html, body {
     margin: 0;
-    overflow: hidden;
+    padding: 0;
+    width: 100%;
+    height: 100%;
     background: #0e0e0e;
-    font-family: Arial, sans-serif;
+    overflow: hidden;
+  }
+
+  video, canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
   }
 
   video {
-    position: absolute;
-    top: 0;
-    left: 0;
     transform: scaleX(-1);
-    opacity: 0.4;
-  }
-
-  canvas {
-    position: absolute;
-    top: 0;
-    left: 0;
+    opacity: 0.35;
+    object-fit: cover;
   }
 </style>
 </head>
@@ -32,7 +35,6 @@
 <video id="video" autoplay playsinline></video>
 <canvas id="canvas"></canvas>
 
-<!-- MediaPipe -->
 <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js"></script>
 
@@ -41,20 +43,22 @@ const video = document.getElementById("video");
 const canvas = document.getElementById("canvas");
 const ctx = canvas.getContext("2d");
 
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
+function resize() {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+}
+window.addEventListener("resize", resize);
+resize();
 
-// Position des Wissens
 let wissen = {
   x: canvas.width / 2,
-  y: canvas.height / 2,
-  radius: 50
+  y: canvas.height / 2
 };
 
 function drawWissen() {
-  ctx.font = "bold 48px Arial";
+  ctx.font = "bold 56px Arial";
   ctx.fillStyle = "#ffffff";
-  ctx.fillText("Wissen", wissen.x - 70, wissen.y);
+  ctx.fillText("Wissen", wissen.x - 90, wissen.y);
 }
 
 function moveWissenAway(handX, handY) {
@@ -62,13 +66,12 @@ function moveWissenAway(handX, handY) {
   const dy = wissen.y - handY;
   const dist = Math.sqrt(dx * dx + dy * dy);
 
-  if (dist < 120) {
-    wissen.x += dx * 0.1;
-    wissen.y += dy * 0.1;
+  if (dist < 150) {
+    wissen.x += dx * 0.15;
+    wissen.y += dy * 0.15;
   }
 }
 
-// MediaPipe Hands
 const hands = new Hands({
   locateFile: file => `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${file}`
 });
@@ -81,32 +84,28 @@ hands.setOptions({
 
 hands.onResults(results => {
   ctx.clearRect(0, 0, canvas.width, canvas.height);
-
   drawWissen();
 
   if (results.multiHandLandmarks) {
-    const indexFinger = results.multiHandLandmarks[0][8];
-
-    const handX = indexFinger.x * canvas.width;
-    const handY = indexFinger.y * canvas.height;
+    const finger = results.multiHandLandmarks[0][8];
+    const handX = finger.x * canvas.width;
+    const handY = finger.y * canvas.height;
 
     moveWissenAway(handX, handY);
 
-    // Handpunkt visualisieren
     ctx.beginPath();
-    ctx.arc(handX, handY, 10, 0, Math.PI * 2);
+    ctx.arc(handX, handY, 12, 0, Math.PI * 2);
     ctx.fillStyle = "#ff4444";
     ctx.fill();
   }
 });
 
-// Kamera starten
 const camera = new Camera(video, {
   onFrame: async () => {
     await hands.send({ image: video });
   },
-  width: 640,
-  height: 480
+  width: 1280,
+  height: 720
 });
 camera.start();
 </script>
