--- a/index.html
+++ b/index.html
@@ -3,41 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>Wissen fangen</title>
-
 <style>
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  background: black;
-  overflow: hidden;
-}
-
-video, canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-}
-
-video {
-  transform: scaleX(-1);
-  opacity: 0.35;
-  object-fit: cover;
-  z-index: 1;
-}
-
-canvas {
-  z-index: 2;
-  pointer-events: none;
-}
+html, body { margin: 0; padding: 0; width: 100%; height: 100%; background: black; overflow: hidden; }
+video, canvas { position: absolute; top: 0; left: 0; width: 100vw; height: 100vh; }
+video { transform: scaleX(-1); opacity: 0.35; object-fit: cover; z-index: 1; }
+canvas { z-index: 2; pointer-events: none; }
 </style>
 </head>
-
 <body>
-
 <video id="video" autoplay playsinline></video>
 <canvas id="canvas"></canvas>
 
@@ -45,25 +18,48 @@ canvas {
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/handpose"></script>
 
 <script>
-const canvas = document.getElementById("canvas");
-const ctx = canvas.getContext("2d");
-
+const video = document.getElementById('video');
+const canvas = document.getElementById('canvas');
+const ctx = canvas.getContext('2d');
 canvas.width = window.innerWidth;
 canvas.height = window.innerHeight;
 
-ctx.fillStyle = "white";
-ctx.font = "bold 80px Arial";
-ctx.fillText("WISSEN", 100, 200);
+// Webcam starten
+async function setupCamera() {
+    const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+    video.srcObject = stream;
+    return new Promise(resolve => {
+        video.onloadedmetadata = () => resolve(video);
+    });
+}
 
-ctx.fillStyle = "red";
-ctx.beginPath();
-ctx.arc(400, 400, 30, 0, Math.PI * 2);
-ctx.fill();
-</script>
+async function main() {
+    await setupCamera();
+    video.play();
 
+    const model = await handpose.load();
+    console.log("Handpose Modell geladen");
+
+    async function render() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+        const predictions = await model.estimateHands(video);
+        if (predictions.length > 0) {
+            const hand = predictions[0];
+            const [x, y] = hand.landmarks[9]; // Mittelfinger-Mittelgelenk als Referenz
+            // Text auf Handposition zeichnen
+            ctx.fillStyle = "white";
+            ctx.font = "bold 80px Arial";
+            ctx.fillText("WISSEN", x * (canvas.width / video.videoWidth), y * (canvas.height / video.videoHeight));
+        }
+
+        requestAnimationFrame(render);
+    }
+
+    render();
+}
 
 main();
 </script>
-
 </body>
 </html>
