--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ video, canvas {
 }
 video {
     transform: scaleX(-1);
-    opacity: 0.35;
+    opacity: 0.35; /* Webcam leicht durchsichtig */
     object-fit: cover;
     z-index: 1;
 }
@@ -40,61 +40,4 @@ canvas {
 
 <script>
 const video = document.getElementById('video');
-const canvas = document.getElementById('canvas');
-const ctx = canvas.getContext('2d');
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
-
-// Webcam starten
-async function setupCamera() {
-    const stream = await navigator.mediaDevices.getUserMedia({ video: true });
-    video.srcObject = stream;
-    return new Promise(resolve => {
-        video.onloadedmetadata = () => resolve(video);
-    });
-}
-
-async function main() {
-    await setupCamera();
-    video.play();
-
-    const model = await handpose.load();
-    console.log("Handpose Modell geladen");
-
-    async function render() {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-        const predictions = await model.estimateHands(video);
-        if (predictions.length > 0) {
-            const hand = predictions[0];
-            // Wir nehmen den Mittelfinger-Mittelgelenk-Punkt (landmark 9)
-            const [x, y] = hand.landmarks[9];
-
-            // Webcam-Koordinaten auf Canvas skalieren
-            const scaleX = canvas.width / video.videoWidth;
-            const scaleY = canvas.height / video.videoHeight;
-            const drawX = x * scaleX;
-            const drawY = y * scaleY;
-
-            // Text "WISSEN" auf Handposition
-            ctx.fillStyle = "white";
-            ctx.font = "bold 80px Arial";
-            ctx.fillText("WISSEN", drawX - 100, drawY - 40); // Offset für bessere Zentrierung
-
-            // Optional: kleiner roter Kreis auf Handpunkt
-            ctx.fillStyle = "red";
-            ctx.beginPath();
-            ctx.arc(drawX, drawY, 15, 0, Math.PI * 2);
-            ctx.fill();
-        }
-
-        requestAnimationFrame(render);
-    }
-
-    render();
-}
-
-main();
-</script>
-</body>
-</html>
+const ca
