--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
 <meta charset="UTF-8">
-<title>Wissen greifen</title>
+<title>Wissen greifbar machen</title>
 
 <style>
 html, body {
