--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Wissen greifbar machen</title>
-
+<meta property="og:title" content="Wissen greifbar machen">
 <style>
 html, body {
     margin: 0;
