--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Wissen greifbar machen</title>
-    
+
+intro:
+redirect_from:
+  - /articles/older-outdated-article-name/
 <style>
 html, body {
     margin: 0;
